Check token pour les actions avec $id
