# app/post.php
@@ -1,5 +1,5 @@
 <?php
 use Symfony\Component\HttpFoundation\Request;
 
-$app->post('/user', "Models\Controller\UserController::postUser");
+$app->post('/users', "Models\Controller\UserController::postUser");
 $app->post('/login', "Models\Controller\UserController::postLoginUser");
