# src/Classes/ContributionModel.php
@@ -3,6 +3,7 @@
 namespace Models\Classes;
 
 use Doctrine\DBAL\Connection;
+use \PDO;
 
 class ContributionModel
 {
@@ -12,6 +13,7 @@ class ContributionModel
      * @var \Doctrine\DBAL\Connection
      */
     private $db;
+    private $pdo;
 
     /**
      * Constructor
@@ -21,6 +23,15 @@ class ContributionModel
     public function __construct(Connection $db)
     {
         $this->db = $db;
+
+        try
+        {
+            $this->pdo = new PDO('mysql:host=localhost;dbname=circus;charset=utf8', 'root', 'root');
+        }
+        catch(Exception $e)
+        {
+            die('Erreur : '.$e->getMessage());
+        }
     }
 
     /**
@@ -52,5 +63,46 @@ class ContributionModel
 
         return $result;
 
+    }
+
+    /**
+     * Récupère les contributions d'une categorie
+     *
+     * @param string $categorie
+     *
+     * @return array $result
+     */
+    function contributionCategorie($categorie)
+    {
+        $sql = "SELECT * FROM contribution WHERE categorie = '".$categorie."'";
+        $contrib = $this->db->fetchAll($sql);
+
+        return $contrib;
+
+    }
+
+    /**
+     * Vérifie si le token envoyé autorise l'accès aux données de l'user id
+     *
+     * @param string $token
+     * @param string $id
+     *
+     * @return boolean
+     */
+    function contributionTokenOk($token,$id)
+    {
+        $sql = $this->pdo->prepare("SELECT * FROM circus_api_token WHERE users_id =:id");
+        $sql->bindValue(":id", $id, PDO::PARAM_STR);
+        $sql->execute();
+        $rows = $sql->fetchAll();
+        $sql->closeCursor();
+        $sql = NULL;
+
+        if ($rows[0]['token'] == $token) {
+            return true;
+        } else {
+            return false;
         }
+
+    }
 }
